--- a/Study/exjs.css
+++ b/Study/exjs.css
@@ -18,10 +18,69 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; width: 100%;
     font-size: 80px;
     font-weight: 700;
     letter-spacing: -1.5px;
     margin: 0;
     color: #000;
+}
+.container {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.btn {
+    z-index: 999;
+    height: 40px;
+    color: #fff;
+    background-color: rgb(0 ,187 ,255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    transition: 0.3s all ease-in-out 0s;
+    cursor: pointer;
+    border: none;
+    width: calc(33.33% - 20px);
+}
+.btn:hover {
+    color: rgb(0 ,187 ,255);
+}
+.btn::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-color: #fff;
+    transition: 0.4s all ease-in-out 0s;
+    border-radius: 3px;
+}
+.btn::before {
+    left: unset;
+    right: 0;
+    width: 0;
+}
+.btn:hover::before {
+    right: unset;
+    width: 100%;
+    left: 0;
+}
+.button {
+    position: relative;
+    margin: 10px;
+}
+#demo {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
 }
